--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -34,3 +34,4 @@ jobs:
         with:
           title: "Update dependencies"
           token: ${{ secrets.PR_GITHUB_TOKEN }}
+          branch-suffix: random
