Use `ctor` to initialize `env_logger`
This eliminates a second dependence on `syn:1.0`.

The only one left is `strum_macros`. But we can't easily eliminate
dependence on that. Also, it has an open PR to update to `syn:2.0` (#261).

--- a/testing/Cargo.toml
+++ b/testing/Cargo.toml
@@ -8,6 +8,8 @@ publish = false
 anyhow = "1.0"
 assert_cmd = "2.0"
 cargo_metadata = "0.15"
+ctor = "0.2"
+env_logger = "0.10"
 if_chain = "1.0"
 lazy_static = "1.4"
 log = "0.4"
