--- a/cargo-test-fuzz/Cargo.toml
+++ b/cargo-test-fuzz/Cargo.toml
@@ -17,7 +17,7 @@ path = "src/bin/cargo_test_fuzz.rs"
 doctest = false
 
 [dependencies]
-anyhow = "1.0"
+anyhow = { version = "1.0", features = ["backtrace"] }
 bitflags = "2.3"
 cargo_metadata = "0.15"
 clap = { version = "4.3", features = ["cargo", "derive", "wrap_help"] }
