--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 description = "test-fuzz-runtime"
 
 authors = ["Samuel E. Moelius III <sam@moeli.us>"]
-license = "MIT OR Apache-2.0"
+license = "AGPL-3.0 WITH mif-exception"
 repository = "https://github.com/trailofbits/test-fuzz"
 
 # smoelius: https://github.com/rust-lang/cargo/issues/1839
