--- a/test-fuzz/Cargo.toml
+++ b/test-fuzz/Cargo.toml
@@ -20,10 +20,13 @@ test-fuzz-macro = { path = "../macro", version = "=4.0.0" }
 [dev-dependencies]
 assert_cmd = "2.0"
 cargo_metadata = "0.15"
+ctor = "0.2"
 lazy_static = "1.4"
 predicates = "3.0"
 regex = "1.8"
 semver = "1.0"
+serde_json = "1.0"
+similar-asserts = "1.4"
 
 testing = { path = "../testing", package = "test-fuzz-testing" }
 
