Migrate away from `lazy_static`

--- a/macro/Cargo.toml
+++ b/macro/Cargo.toml
@@ -16,7 +16,7 @@ proc-macro = true
 darling = "0.20"
 if_chain = "1.0"
 itertools = "0.11"
-lazy_static = "1.4"
+once_cell = "1.18"
 proc-macro2 = "1.0"
 quote = "1.0"
 subprocess = "0.2"
