--- a/cargo-test-fuzz/Cargo.toml
+++ b/cargo-test-fuzz/Cargo.toml
@@ -23,8 +23,8 @@ cargo_metadata = "0.15"
 clap = { version = "4.3", features = ["cargo", "derive", "wrap_help"] }
 env_logger = "0.10"
 heck = "0.4"
-lazy_static = "1.4"
 log = "0.4"
+once_cell = "1.18"
 paste = "1.0"
 remain = "0.2"
 semver = "1.0"
