--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -13,7 +13,7 @@ serde = { version = "1.0", features = ["rc"] }
 test-fuzz = { path = "../test-fuzz", version = "=4.0.1" }
 
 [dev-dependencies]
-lazy_static = "1.4"
+once_cell = "1.18"
 parse_duration = "2.1"
 serde_json = "1.0"
 
