--- a/test-fuzz/Cargo.toml
+++ b/test-fuzz/Cargo.toml
@@ -21,7 +21,7 @@ test-fuzz-macro = { path = "../macro", version = "=4.0.1" }
 assert_cmd = "2.0"
 cargo_metadata = "0.15"
 ctor = "0.2"
-lazy_static = "1.4"
+once_cell = "1.18"
 predicates = "3.0"
 regex = "1.8"
 semver = "1.0"
