--- a/testing/Cargo.toml
+++ b/testing/Cargo.toml
@@ -11,8 +11,8 @@ cargo_metadata = "0.15"
 ctor = "0.2"
 env_logger = "0.10"
 if_chain = "1.0"
-lazy_static = "1.4"
 log = "0.4"
+once_cell = "1.18"
 retry = "2.0"
 subprocess = "0.2"
 
