--- a/cargo-test-fuzz/Cargo.toml
+++ b/cargo-test-fuzz/Cargo.toml
@@ -45,6 +45,7 @@ rustc_version = "0.4"
 semver = "1.0"
 serde_json = "1.0"
 tempfile = "3.6"
+xshell = "0.2"
 
 testing = { path = "../testing", package = "test-fuzz-testing" }
 
