--- a/.github/workflows/update_supply_chain.yml
+++ b/.github/workflows/update_supply_chain.yml
@@ -38,6 +38,6 @@ jobs:
       - name: Create pull request
         uses: peter-evans/create-pull-request@v5
         with:
-          title: "Update supply_chain.json"
+          title: Update supply_chain.json
           token: ${{ secrets.PR_GITHUB_TOKEN }}
           branch-suffix: random
