--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,7 +90,8 @@ jobs:
 
       - name: Dylint
         run: |
-          cargo install cargo-dylint dylint-link || true
+          cargo install cargo-dylint --git https:/github.com/trailofbits/dylint --branch ignore-non-pkg-subdirs --force
+          cargo install dylint-link || true
           ./scripts/dylint.sh
 
       - name: Udeps
