Format Cargo.toml

--- a/test-fuzz/Cargo.toml
+++ b/test-fuzz/Cargo.toml
@@ -34,10 +34,25 @@ testing = { path = "../testing", package = "test-fuzz-testing" }
 # https://github.com/djkoloski/rust_serialization_benchmark
 
 [features]
-auto_concretize = ["internal/__auto_concretize", "test-fuzz-macro/__auto_concretize"]
-serde_bincode = ["internal/__serde_bincode", "runtime/__serde_bincode", "test-fuzz-macro/__serde_bincode"]
-serde_cbor = ["internal/__serde_cbor", "runtime/__serde_cbor", "test-fuzz-macro/__serde_cbor"]
-serde_cbor4ii = ["internal/__serde_cbor4ii", "runtime/__serde_cbor4ii", "test-fuzz-macro/__serde_cbor4ii"]
+auto_concretize = [
+    "internal/__auto_concretize",
+    "test-fuzz-macro/__auto_concretize",
+]
+serde_bincode = [
+    "internal/__serde_bincode",
+    "runtime/__serde_bincode",
+    "test-fuzz-macro/__serde_bincode",
+]
+serde_cbor = [
+    "internal/__serde_cbor",
+    "runtime/__serde_cbor",
+    "test-fuzz-macro/__serde_cbor",
+]
+serde_cbor4ii = [
+    "internal/__serde_cbor4ii",
+    "runtime/__serde_cbor4ii",
+    "test-fuzz-macro/__serde_cbor4ii",
+]
 __persistent = ["afl", "test-fuzz-macro/__persistent"]
 
 [package.metadata.cargo-udeps.ignore]
