--- a/macro/Cargo.toml
+++ b/macro/Cargo.toml
@@ -14,6 +14,7 @@ proc-macro = true
 
 [dependencies]
 darling = "0.20"
+heck = { version = "0.4", optional = true }
 itertools = "0.12"
 once_cell = "1.19"
 prettyplease = "0.2"
@@ -23,3 +24,4 @@ syn = { version = "2.0", features = ["full", "parsing", "visit", "visit-mut"] }
 
 [features]
 __persistent = []
+__self_ty_in_mod_name = ["heck"]
