--- a/.github/workflows/update_dependencies.yml
+++ b/.github/workflows/update_dependencies.yml
@@ -32,6 +32,7 @@ jobs:
       - name: Create pull request
         uses: peter-evans/create-pull-request@v5
         with:
-          title: "Update dependencies"
+          title: Update dependencies
+          commit-message: Update dependencies
           token: ${{ secrets.PR_GITHUB_TOKEN }}
           branch-suffix: random
