--- a/test-fuzz/Cargo.toml
+++ b/test-fuzz/Cargo.toml
@@ -38,15 +38,9 @@ auto_concretize = [
     "internal/__auto_concretize",
     "test-fuzz-macro/__auto_concretize",
 ]
-serde_bincode = [
-    "internal/__serde_bincode",
-]
-serde_cbor = [
-    "internal/__serde_cbor",
-]
-serde_cbor4ii = [
-    "internal/__serde_cbor4ii",
-]
+serde_bincode = ["internal/__serde_bincode"]
+serde_cbor = ["internal/__serde_cbor"]
+serde_cbor4ii = ["internal/__serde_cbor4ii"]
 __persistent = ["afl", "test-fuzz-macro/__persistent"]
 
 [package.metadata.cargo-udeps.ignore]
