--- a/macro/Cargo.toml
+++ b/macro/Cargo.toml
@@ -17,11 +17,10 @@ darling = "0.20"
 if_chain = "1.0"
 itertools = "0.12"
 once_cell = "1.18"
+prettyplease = "0.2"
 proc-macro2 = "1.0"
 quote = "1.0"
-subprocess = "0.2"
 syn = { version = "2.0", features = ["full", "parsing", "visit", "visit-mut"] }
-toolchain_find = "0.4"
 
 internal = { path = "../internal", package = "test-fuzz-internal", version = "=4.0.4", optional = true }
 
