--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -21,7 +21,7 @@ jobs:
 
       - uses: actions/github-script@v7
         with:
-          github-token: ${{ secrets.PR_GITHUB_TOKEN }}
+          github-token: ${{ secrets.DEPENDABOT_REPO_TOKEN }}
           script: |
             github.rest.issues.createComment({
               issue_number: context.issue.number,
