--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,17 @@ members = [
 ]
 resolver = "2"
 
+[workspace.lints.clippy]
+pedantic = { level = "warn", priority = -1 }
+nursery = { level = "warn", priority = -1 }
+cognitive-complexity = "allow"
+collection-is-never-read = "allow"
+missing-errors-doc = "allow"
+missing-panics-doc = "allow"
+multiple-bound-locations = "allow"
+option-if-let-else = "allow"
+redundant-pub-crate = "allow"
+
 [workspace.metadata.dylint]
 libraries = [
     { git = "https://github.com/trailofbits/dylint", pattern = "examples/general" },
