--- a/test-fuzz/Cargo.toml
+++ b/test-fuzz/Cargo.toml
@@ -38,6 +38,7 @@ self_ty_in_mod_name = ["test-fuzz-macro/__self_ty_in_mod_name"]
 serde_bincode = ["internal/__serde_bincode"]
 serde_cbor = ["internal/__serde_cbor"]
 serde_cbor4ii = ["internal/__serde_cbor4ii"]
+serde_postcard = ["internal/__serde_postcard"]
 __persistent = ["afl", "test-fuzz-macro/__persistent"]
 
 [lints]
