--- a/internal/Cargo.toml
+++ b/internal/Cargo.toml
@@ -20,12 +20,14 @@ serde = "1.0"
 
 bincode = "1.3"
 cbor4ii = { version = "0.3", features = ["serde1", "use_std"], optional = true }
+postcard = { version = "1.0", features = ["use-std"], optional = true }
 serde_cbor = { version = "0.11", optional = true }
 
 [features]
 __serde_bincode = []
 __serde_cbor = ["serde_cbor"]
 __serde_cbor4ii = ["cbor4ii"]
+__serde_postcard = ["postcard"]
 
 [lints]
 workspace = true
