--- a/cargo-test-fuzz/Cargo.toml
+++ b/cargo-test-fuzz/Cargo.toml
@@ -24,6 +24,8 @@ clap = { version = "4.5", features = ["cargo", "derive", "wrap_help"] }
 env_logger = "0.11"
 heck = "0.5"
 log = "0.4"
+mio = { version = "0.8", features = ["os-ext", "os-poll"] }
+num_cpus = "1.16"
 paste = "1.0"
 remain = "0.2"
 semver = "1.0"
