--- a/cargo-test-fuzz/Cargo.toml
+++ b/cargo-test-fuzz/Cargo.toml
@@ -47,6 +47,7 @@ rustc_version = "0.4"
 semver = "1.0"
 serde_json = "1.0"
 tempfile = "3.10"
+walkdir = "2.5"
 xshell = "0.2"
 
 testing = { path = "../testing", package = "test-fuzz-testing" }
