Guard tests with features rather than `ignore`

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -155,6 +155,12 @@ jobs:
 
       - name: Setup
         run: |
+          TEST_THIRD_PARTY_FULL=
+          if [[ ${{ github.event_name }} = 'schedule' ]] ||
+            git diff --name-only ${{ github.event.pull_request.base.sha }} | grep -w 'patches\|third_party' >/dev/null
+          then
+            TEST_THIRD_PARTY_FULL='--features=test-third-party-full'
+          fi
           SERDE_FORMAT='--features=test-fuzz/serde_${{ matrix.serde_format }}'
           SHUFFLE=
           if [[ ${{ matrix.toolchain }} = nightly ]]; then
@@ -162,8 +168,8 @@ jobs:
           fi
           SELF_TY_IN_MOD_NAME="$(${{ matrix.self_ty_in_mod_name }} && echo '--features test-fuzz/self_ty_in_mod_name')" || true
           CONFIG_GROUP_RUNNER="--config target.'cfg(all())'.runner='group-runner'"
-          BUILD_CMD="cargo build $SERDE_FORMAT $SELF_TY_IN_MOD_NAME --all-targets"
-          TEST_CMD="cargo test $SERDE_FORMAT $SELF_TY_IN_MOD_NAME $CONFIG_GROUP_RUNNER -- --nocapture $SHUFFLE"
+          BUILD_CMD="cargo build --features=test-install $TEST_THIRD_PARTY_FULL $SERDE_FORMAT $SELF_TY_IN_MOD_NAME --all-targets"
+          TEST_CMD="cargo test --features=test-install $TEST_THIRD_PARTY_FULL $SERDE_FORMAT $SELF_TY_IN_MOD_NAME $CONFIG_GROUP_RUNNER -- --nocapture $SHUFFLE"
           echo "BUILD_CMD=$BUILD_CMD" >> "$GITHUB_ENV"
           echo "TEST_CMD=$TEST_CMD" >> "$GITHUB_ENV"
 
@@ -173,11 +179,6 @@ jobs:
       - name: Test
         run: |
           $TEST_CMD
-          if [[ ${{ github.event_name }} = 'schedule' ]] ||
-            git diff --name-only ${{ github.event.pull_request.base.sha }} | grep -w 'patches\|third_party' >/dev/null
-          then
-            $TEST_CMD --ignored
-          fi
         env:
           RUST_BACKTRACE: 1
           RUST_LOG: warn
