Add `num_cpus` to `[workspace.metadata.unmaintained]`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,4 +25,4 @@ option-if-let-else = "allow"
 redundant-pub-crate = "allow"
 
 [workspace.metadata.unmaintained]
-ignore = ["parse_duration"]
+ignore = ["num_cpus", "parse_duration"]
