--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -12,6 +12,9 @@ path = "src/main.rs"
 serde = { version = "1.0", features = ["rc"] }
 test-fuzz = { path = "../test-fuzz", version = "=5.2.0" }
 
+[build-dependencies]
+rustc_version = "0.4"
+
 [dev-dependencies]
 once_cell = "1.19"
 parse_duration = "2.1"
